--- a/src/index.scss
+++ b/src/index.scss
@@ -260,7 +260,8 @@ body {
 }
 
 .bg-gray{
-  background-color: gray;
+  border: none;
+  background-color: lightgray;
   color: var(--dark-ciano);
 
   @include font-corpo1();
